# bezier-trajectory

./: .gitignore  AGENTS.md  Bezier_Curve_Optimizer.py  CLAUDE.md  DEBUGGER_SPEC.md  Orbital_Docking_Development.ipynb  Orbital_Docking_Development.py  Orbital_Docking_Expectation_Figure.py  Orbital_Docking_Optimizer.ipynb  Orbital_Docking_Optimizer.py  Project_Spec.md  README.md  ToDo.md  VISION.md  __init__.py  bezier_matrix_utils.py  figure.py  hello_world.ipynb  pytest.ini  requirements-dev.txt  requirements.txt  rust_migration_baseline.json  spacetime_opt_debug.py  spacetime_optimize.py  spec.md  논문 작성 내용 구체화.md
orbit-transfer-analysis/: .gitignore  CLAUDE.md  Makefile  README.md  environment.yml  ko_part2.tex  pruning_audit.md  pyproject.toml  traceability.md
orbit-transfer-analysis/blade-orbit/: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  readme.md  research-notes.yml
orbit-transfer-analysis/data/: colloc_baseline.duckdb  trajectories_circular.duckdb  trajectories_eccentric.duckdb  trajectories_new.duckdb
orbit-transfer-analysis/docs/: LEO-to-LEO 궤적최적화 구현 명세서.md  database_sampling_spec.md
orbit-transfer-analysis/manuscript/: Makefile  cas-refs.bib  manuscript.tex
orbit-transfer-analysis/manuscript-ko/: Makefile  cas-dc.cls  cas-refs.bib  manuscript.tex
orbit-transfer-analysis/reports/: Makefile
orbit-transfer-analysis/scripts/: analyze_database.py  analyze_dominant_factors.py  batch_make_maps.py  check_db.py  compare_class_switches.py  compare_peak_detectors.py  compare_slices.py  compare_ut_class2_to_0.py  diagnose_peak_detection.py  generate_figures.py  generate_tables.py  inspect_results.py  plot_baseline_vs_blade_maps.py  plot_blade_classification_maps.py  plot_blade_db_analysis.py  plot_classification_map.py  plot_comparison.py  plot_failure_map.py  plot_mismatch_thrust.py  plot_results.py  (+20 more)
(+2244 files in other folders)
