[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit-transfer"
version = "0.1.0"
description = "LEO-to-LEO continuous thrust trajectory optimization and classification"
requires-python = ">=3.11"
dependencies = [
    "casadi",
    "numpy",
    "scipy",
    "scikit-learn",
    "duckdb",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
