[project]
name = "bezier-orbit"
version = "0.1.0"
description = "Bezier curve-based orbit transfer trajectory optimization via SCP"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "cvxpy>=1.5",
    "duckdb>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bezier_orbit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
